# parallel_proj

./: CMakeLists.txt  CMakePresets.json  LICENSE  PI_MPI_det_sleep.c  README.md  grid.c  grid.h  individual.c  individual.h  individual_soa.c  individual_soa.h  main.c  rand_utils.c  rand_utils.h  simulation.c  simulation.h  typedefs.h
PI_MPI_det/: PI_MPI_det.c  PI_MPI_det_master_worker.c  makefile
PI_MPI_sto/: PI_MPI_sto.c  makefile
